--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.3.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
 
@@ -52,6 +54,12 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/icons/launcher_icon.png
+  min_sdk_android: 21
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
