--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,8 +14,9 @@ workflows:
         script: flutter pub get
 
 
-      - name: Decode Keystore File
-        script: echo $CM_KEYSTORE | base64 --decode > android/app/upload-keystore.jks
+      - - name: Decode Keystore File
+      - script: echo $CM_KEYSTORE | base64 --decode > android/app/upload-keystore.jks
+
 
       - name: Create key.properties
         script: |
@@ -33,14 +34,15 @@ workflows:
       - name: Build iOS App
         script: flutter build ios --release --no-codesign
 
-      - name: Decode Google Play JSON Key
-        script: echo $GOOGLE_PLAY_JSON | base64 --decode > /tmp/google_play.json
+      - - name: Decode Google Play JSON Key
+      - script: echo $GOOGLE_PLAY_JSON | base64 --decode > /tmp/google_play.json
+
 
       - name: Upload to Google Play
-        script: |
-          gcloud auth activate-service-account --key-file=/tmp/google_play.json
-          gcloud --quiet auth configure-docker
-          fastlane supply --track alpha --json-key /tmp/google_play.json --package_name com.weatherapi.weatherapi_finals --aab build/app/outputs/bundle/release/app-release.aab
+      - script: |
+      - gcloud auth activate-service-account --key-file=/tmp/google_play.json
+      - gcloud --quiet auth configure-docker
+      - fastlane supply --track alpha --json-key /tmp/google_play.json --package_name com.example.weatherapi_finals --aab build/app/outputs/bundle/release/app-release.aab
 
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
