--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.weatherapi_finals"> <!-- Ensure this matches your actual package name -->
+    package="com.weatherapp.weatherapi_finals"> <!-- Ensure this matches your actual package name -->
 
     <application
         android:label="weatherapi_finals"
